# ehbc-firmware

./: CMakeLists.txt  LICENSE  LICENSE-GPL-3.0  README.md  cfgutil_ui.txt  config.h.in
arch/m68k/: CMakeLists.txt  dump.c  exception.S  exception.asm  exception.h  init.S  init.asm  irq.S  irq.asm  irq.c  syscall.c
arch/m68k/include/asm/: elf.h  io.h  irq.h  machdep.h  movec.h  processor.h
arch/m68k/proto1/: CMakeLists.txt  cfgutil.c  debug.c  exception.asm  exception.c  init.c  io.S  io.asm  ldscript.x  mc68440.h  mmio.asm  mmio.h  nvsram.c  nvsram.txt  scu.c  scu.h  start.S  start.asm  syscall.c
cmake/: CMakeASM_VASMCompiler.cmake.in  CMakeASM_VASMInformation.cmake  CMakeDetermineASM_VASMCompiler.cmake  CMakeTestASM_VASMCompiler.cmake  M68kUnknownElfToolchain.cmake
core/: CMakeLists.txt  _main.c  main.c
drivers/: CMakeLists.txt
drivers/base/: CMakeLists.txt  bus.h  device.h  feature.h
drivers/block/: block.h
drivers/hid/: CMakeLists.txt  i8042.c
drivers/i2c/: i2c.h
drivers/rtc/: mc146818.c  rtc.h
drivers/scsi/: ncr5380.c  scsi.h
drivers/serial/: CMakeLists.txt  mc68681.c  mc68681.h  mc68901.c  mc68901.h  scc.c  scc.h
examples/: CMakeLists.txt
examples/basic/: CMakeLists.txt  basic.c  config.h.in  mpool.c  my_basic.c  my_basic.h  shell.c
examples/basic/my_basic/: mb_gc.c  mb_hashtable.c  mb_internal.h  mb_lib_coll.c  mb_lib_coll.h  mb_lib_core.c  mb_lib_core.h  mb_lib_dmm.c  mb_lib_dmm.h  mb_lib_std.c  mb_lib_std.h  mb_list.c  mb_memory.c  mb_unicode.c  my_basic.c  my_basic.h
examples/hello/: CMakeLists.txt  hello.c
examples/hello_world/: CMakeLists.txt  main.c
include/: debug.h  io.h  macros.h  types.h
include/asm-generic/: io.h  irq.h  machdep.h  processor.h
libehbcfw/: CMakeLists.txt
libehbcfw/arch/m68k/: CMakeLists.txt  arch-syscall.h  setjmp.S  setjmp.asm  syscall.asm  syscall_aio.c  syscall_storage.c  syscall_video.c
libehbcfw/arch/m68k/include/asm/: math.h  setjmp.h
libehbcfw/arch/m68k/include/libehbcfw/asm/: bswap.h  elf.h  processor.h  syscall.h
libehbcfw/arch/m68k/proto1/: CMakeLists.txt  crtbegin.S  crtbegin.asm  crtend.S  crtend.asm  ldscript.x
libehbcfw/include/: assert.h  bswap.h  ctype.h  debug.h  errno.h  func_type.h  locale.h  math.h  setjmp.h  stdio.h  stdlib.h  string.h  time.h  vsprintf.h
libehbcfw/include/libehbcfw/: device.h  disk.h  elf.h  memmap.h  mpool.h  syscall.h
libehbcfw/src/: CMakeLists.txt  assert.c  bswap.c  ctype.c  disk.c  elf.c  memcpy.c  memset.c  memset16.c  mktime.c  mm.c  mm.h  mpool.c  printf.c  sprintf.c  string.c  strncmp.c  strncpy.c  syscall_aio.c  syscall_inputdev.c  syscall_rtc.c  syscall_storage.c  syscall_video.c  time.c  vsnprintf.c  vsprintf.c
libehbcfw/src/stdc/: CMakeLists.txt  abs.c  asctime.c  assert.c  atexit.c  atoi.c  exit.c  fgets.c  fprintf.c  free.c  localtime.c  malloc.c  putchar.c  rand.c  realloc.c  setlocale.c  snprintf.c  stdio.c  strchr.c  strerror.c  strftime.c  strncasecmp.c  strncat.c  strncmp.c  strrchr.c  strtod.c  strtol.c  strtoll.c  time.c  vprintf.c  vsprintf.c
rsrc/: CMakeLists.txt
src/: CMakeLists.txt  _unused.c  cfgutil.c  cfgutil.h  debug.c  device.c  device.h  exec.c  exec.h  macros.h  main.c  memmap.c  memmap.h  memory.c  memory.h  monitor.c  ringbuf.c  ringbuf.h  spinlock.c  spinlock.h  splash.c  splash.h  types.h
src/basic/: CMakeLists.txt  basic.c  mpool.c  mpool.h
src/crypto/: CMakeLists.txt  crc32.c  crc32.h
src/fs/: CMakeLists.txt  fat.c  fat.h
src/hw/: CMakeLists.txt  ata.c  ata.h  floppy.c  floppy.h  mc68681.c  mc68681.h  ps2kbms.c  ps2kbms.h  rtc.c  rtc.h  stdvgamodes.i  vga.c  vga.h  vgapalette.i  vgaregs.c  vgaregs.h
tools/: make_image.sh
utils/: CMakeLists.txt
utils/romfs/: CMakeLists.txt  mkromfs.c  romfs.c  romfs.h
