cmake_minimum_required(VERSION 3.13)

add_subdirectory(ata)
add_subdirectory(audio)
add_subdirectory(block)
add_subdirectory(dma)
add_subdirectory(fdc)
add_subdirectory(hid)
add_subdirectory(net)
add_subdirectory(rtc)
add_subdirectory(scsi)
add_subdirectory(serial)
add_subdirectory(timer)
add_subdirectory(video)
